new super should be a syntax error https://bugs.webkit.org/show_bug.cgi?id=144282

Reviewed by Joseph Pecoraro.

Source/JavaScriptCore:

Disallow "new super" as ES6 spec doesn't allow this.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseMemberExpression):

LayoutTests:

Rebaselined the test.

* js/class-syntax-super-expected.txt:
* js/script-tests/class-syntax-super.js:


Canonical link: https://commits.webkit.org/162592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183757 268f45cc-cd09-0410-ab3c-d52691b4dbfc